add todoitem entity

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -45,6 +45,7 @@
         "name": "generator-jhipster-vuejs",
         "version": "1.9.2"
       }
-    ]
+    ],
+    "lastLiquibaseTimestamp": 1601920772000
   }
 }
