--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "bootstrap-vue": "2.14.0",
     "bootswatch": "4.5.0",
     "date-fns": "2.14.0",
-    "swagger-ui-dist": "3.25.4",
     "sockjs-client": "1.1.4",
-    "webstomp-client": "1.2.0",
+    "swagger-ui-dist": "3.25.4",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
     "vue-cookie": "1.1.4",
@@ -28,10 +27,10 @@
     "vue-router": "3.2.0",
     "vue2-filters": "0.11.0",
     "vuelidate": "0.7.5",
-    "vuex": "3.4.0"
+    "vuex": "3.4.0",
+    "webstomp-client": "1.2.0"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
     "@types/jest": "25.2.3",
     "@types/node": "14.0.4",
     "@types/sinon": "9.0.3",
@@ -40,6 +39,7 @@
     "@vue/cli-service": "4.3.1",
     "@vue/test-utils": "1.0.3",
     "autoprefixer": "9.8.0",
+    "babel-core": "7.0.0-bridge.0",
     "browser-sync": "2.26.7",
     "browser-sync-webpack-plugin": "2.2.2",
     "copy-webpack-plugin": "6.0.1",
@@ -49,7 +49,7 @@
     "friendly-errors-webpack-plugin": "1.7.0",
     "generator-jhipster-vuejs": "1.9.2",
     "html-webpack-plugin": "4.3.0",
-    "husky": "4.2.5",
+    "husky": "^4.3.0",
     "jest": "26.0.1",
     "jest-junit": "10.0.0",
     "jest-serializer-vue": "2.0.2",
