add mysql db settings

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -36,10 +36,9 @@ spring:
     serialization:
       indent-output: true
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/todolist?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-    username: root
-    password: qwerty
+    url: jdbc:mysql://database-2.c5khresqi16u.us-east-1.rds.amazonaws.com:3306/db_todolist?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: balbaursakuser
+    password: EdRf&5678
     hikari:
       poolName: Hikari
       auto-commit: false
